[gd_scene load_steps=3 format=3 uid="uid://c80b7upla5lnh"]

[ext_resource type="Theme" uid="uid://dtqc0qh1lnd56" path="res://Assets/Menus/base_theme.tres" id="1_qk61a"]
[ext_resource type="Script" path="res://Assets/Menus/game_menu.gd" id="2_k3pad"]

[node name="GameMenu" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("2_k3pad")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -160.0
offset_right = 256.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qk61a")
color = Color(0.141176, 0.141176, 0.141176, 0.552941)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -20.0
offset_right = 79.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qk61a")
alignment = 1

[node name="ContinueButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qk61a")
text = "Continue"

[node name="SettingsButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qk61a")
text = "Settings"

[node name="ExitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qk61a")
text = "Exit to Main Menu"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qk61a")
text = "Quit to Desktop"

[connection signal="pressed" from="ColorRect/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
